v 1.0.0 
	Released with Angular 2.0 -rc 4;

v 1.1.0 
	Released with Angular 2.0 final release version from 15.09.2016

v.1.1.01 
	Readme.txt updated.
v.1.1.02 
	Fixed readme.txt inconsistency.

v.1.2.0 
	Added simple demo service.

v.1.3.0 
	Moved from TypeScript 1.8 => 2.0
	Updated NuGet dependencies. 
	Removed NuGet auto-restoring.
	Readme reworked.
	