@@ -1,0 +1,7 @@
+﻿h1:first-letter {
+    color: red;
+}
+
+.security-token {
+    color: green;
+}
