@@ -1,0 +1,3 @@
+﻿<h1>My First Angular 2 App</h1>
+<p>Hello user. You was authenticated with token: <span class="security-token">{{SecurityInfo.Token}}</span></p>
+<p>All systems nominal </p>
