@@ -150,7 +150,7 @@
 
     <div id="frm_nll" class="section info">
         <h2>Install application from null manually</h2>
-
+        <span>Note, that this will help you install only minimum part of the application.</span>
         <ol>
             <li>Install NPM Task Runner and Package Installer.</li>
 
