@@ -1,3 +1,2 @@
-﻿my-app > h1:first-letter {
-    color:red;
+﻿body {
 }
